--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
         "ionic-plugin-keyboard": "2.2.1",
         "ionicons": "3.0.0",
         "ng2-validation": "4.2.0",
+        "p5": "^0.6.1",
+        "processing-js": "^1.6.6",
         "rxjs": "6.0.0",
         "rxjs-compat": "^6.0.0",
         "sw-toolbox": "3.6.0",
